objects/Proposal_Request__c.object
<CustomObject>
    <description>Proposal Request Tool for Sales Team</description>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>Additional information that has not been addressed in other fields</inlineHelpText>
        <label>Additional Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anticipated_Award_Date_Text__c</fullName>
        <description>for use in proposal calendar only- not on page layouts</description>
        <formula>&quot;Anticipated Award Date&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anticipated Award Date- Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Award_Date__c</fullName>
        <inlineHelpText>Enter the anticipated date of award</inlineHelpText>
        <label>Anticipated Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approximate_Install_Date__c</fullName>
        <formula>Opportunity__r.Approximate_Install_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Approximate Install Date from Opportunity</inlineHelpText>
        <label>Approximate Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Deposit_Needed__c</fullName>
        <inlineHelpText>Is a Bid Bond or Deposit needed?</inlineHelpText>
        <label>Bid Bond/Deposit Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capture_Plan_Location__c</fullName>
        <inlineHelpText>Link to the Capture Plan</inlineHelpText>
        <label>Capture Plan Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Capture_Plan_Ready_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the capture plan is ready for review. Upon checking, a notification email will be sent to the review team</inlineHelpText>
        <label>Capture Plan Ready for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposal Requests</relationshipLabel>
        <relationshipName>Proposal_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Required__c</fullName>
        <inlineHelpText>Is a Contract Review by legal required? If yes, please submit a Legal Request in Salesforce. You will get an email reminder to do this.</inlineHelpText>
        <label>Contract Review Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Consultant__c</fullName>
        <description>brings over customer consultant from related opportunity.   List on proposal request to help with visibility in case information is not being properly populated</description>
        <formula>Opportunity__r.Customer_Consultant__r.Name</formula>
        <inlineHelpText>brings over customer consultant from related opportunity.  If blank please populate on the related opportunity.</inlineHelpText>
        <label>Customer Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline_for_Questions_Text__c</fullName>
        <formula>&quot;Deadline for Questions&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deadline for Questions- Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline_for_Questions__c</fullName>
        <inlineHelpText>Enter the date and time of the deadline for questions</inlineHelpText>
        <label>Deadline for Questions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date_Reminder__c</fullName>
        <description>Used for the timebased workflow email reminder.</description>
        <formula>Due_Date__c - 5 /(abs(5/7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>5 Business days before the &quot;Due Date&quot;.</inlineHelpText>
        <label>Due Date Reminder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date_Text__c</fullName>
        <description>for use in proposal calendar only- not on page layouts</description>
        <formula>&quot;Due Date&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date- Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>When is the due date on the proposal?</inlineHelpText>
        <label>Due Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_PTO_Date__c</fullName>
        <inlineHelpText>Estimated or Assumed PTO date</inlineHelpText>
        <label>Estimated PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Submitted_Proposal_Location__c</fullName>
        <inlineHelpText>Link to location of final proposal</inlineHelpText>
        <label>Final/Submitted Proposal Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Financials__c</fullName>
        <label>Financials</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buy</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>Fixed Loan</fullName>
                </value>
                <value>
                    <fullName>Flex Loan</fullName>
                </value>
                <value>
                    <fullName>CREB</fullName>
                </value>
                <value>
                    <fullName>Affordable Housing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Construction_Start_Date__c</fullName>
        <inlineHelpText>Is there a hard date for construction to start?</inlineHelpText>
        <label>Hard Construction Start Date?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Due_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there a hard due date on the RFP or Proposal?</inlineHelpText>
        <label>Hard Due Date?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Rate__c</fullName>
        <formula>TEXT(Opportunity__r.Rebate_Program__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Incentive Rate from the Opportunity</inlineHelpText>
        <label>Incentive Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Requirements__c</fullName>
        <inlineHelpText>List any insurance requirements if they exist- if not, enter N/A</inlineHelpText>
        <label>Insurance Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_Requested__c</fullName>
        <inlineHelpText>Level 1: Basic
Level 2: Detailed- Cover letter and system description can be included if asked in &quot;notes&quot; section</inlineHelpText>
        <label>Level Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limitations_on_Construction_Hours__c</fullName>
        <inlineHelpText>Any restrictions or limitations on construction hours?</inlineHelpText>
        <label>Limitations on Construction Hours?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liquidated_Damages_day__c</fullName>
        <inlineHelpText>Liquidated damages amount- dollars per day</inlineHelpText>
        <label>Liquidated Damages ($/day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <inlineHelpText>If the submittal method is Direct Mail then please enter a mailing address for the Sales Associate to submit to.</inlineHelpText>
        <label>Mailing Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposal Requests</relationshipLabel>
        <relationshipName>Proposal_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Bond_Needed__c</fullName>
        <inlineHelpText>Any other Bonds needed?</inlineHelpText>
        <label>Other Bond Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Financing_Method__c</fullName>
        <label>Other Financing Method</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Level__c</fullName>
        <inlineHelpText>If requesting a different Level than 1 or 2 please use this section to provide details.</inlineHelpText>
        <label>Other Level</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Bond_Needed__c</fullName>
        <inlineHelpText>Is a Payment Bond needed?</inlineHelpText>
        <label>Payment Bond Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Construction_Bond_Needed__c</fullName>
        <inlineHelpText>Is a Performance or Construction Bond needed?</inlineHelpText>
        <label>Performance/Construction Bond Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Guarantee__c</fullName>
        <formula>TEXT(Opportunity__r.Performance_Guarantee_Included__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Performance Guarantee Included on Opportunity</inlineHelpText>
        <label>Performance Guarantee?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Goal__c</fullName>
        <inlineHelpText>specifics regarding project objective</inlineHelpText>
        <label>Primary Goal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposal Requests</relationshipLabel>
        <relationshipName>Proposal_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_State__c</fullName>
        <inlineHelpText>State the project is located- Sales Associate will be determined by this field</inlineHelpText>
        <label>Project State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Proposal Requests</relationshipLabel>
        <relationshipName>Proposal_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Completed_Date__c</fullName>
        <inlineHelpText>Date status is changed to &quot;completed&quot;</inlineHelpText>
        <label>Proposal Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Draft_Location__c</fullName>
        <inlineHelpText>Link to the location of the proposal draft. When status = Draft Posted and email alert will go to the review team with this link included</inlineHelpText>
        <label>Proposal Draft Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Proposal_Grouping__c</fullName>
        <description>IF(AND(OR(ISPICKVAL( Opportunity__r.StageName, &quot;Proposal Submitted&quot;),ISPICKVAL( Opportunity__r.StageName, &quot;Shortlisted/Interviews&quot;)), NOT( ISNULL(Opportunity__r.Proposal_Submitted_Date__c))),&quot;Sent&quot;,
IF(AND(NOT(ISNULL(TEXT(Status__c))),
NOT(ISNULL(Due_Date</description>
        <formula>IF(AND(OR(ISPICKVAL( Opportunity__r.StageName, &quot;Proposal Submitted&quot;),ISPICKVAL( Opportunity__r.StageName, &quot;Shortlisted/Interviews&quot;)), NOT( ISNULL(Opportunity__r.Proposal_Submitted_Date__c))),&quot;Sent&quot;,
	IF(AND(AND(Opportunity__r.of_Proposal_Requests__c = 0,NOT(ISNULL(Opportunity__r.Proposal_Submitted_Date__c)),OR(ISPICKVAL( Opportunity__r.StageName, &quot;Proposal Submitted&quot;)),ISPICKVAL( Opportunity__r.StageName, &quot;Shortlisted/Interviews&quot;))), &quot;Sent&quot;,
	IF(AND(NOT(ISNULL(TEXT(Status__c))),NOT(ISNULL(Due_Date__c))),&quot;Forecasted&quot;,
	&quot;Not Sent&quot;)))</formula>
        <label>Proposal Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Ready_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal Ready for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Tool_Attached__c</fullName>
        <label>Proposal Tool Attached</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_System_Size__c</fullName>
        <formula>Opportunity__r.Proposed_System_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Proposed System Size from the Opportunity (watts)</inlineHelpText>
        <label>Proposed System Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchasing_Entity_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Account related to the Opportunity listed</inlineHelpText>
        <label>Purchasing Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Contact__c</fullName>
        <inlineHelpText>Enter the name and email address for the RFP contact</inlineHelpText>
        <label>RFP Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Location_Info__c</fullName>
        <inlineHelpText>Please list the website or alternate location of the RFP here.</inlineHelpText>
        <label>RFP Location Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Location__c</fullName>
        <inlineHelpText>Where is the RFP? if website, please fill out Other RFP Location field</inlineHelpText>
        <label>RFP Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Attached</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Box.com</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_Roofing_Necessary_Prior_to_Build__c</fullName>
        <inlineHelpText>Is it necessary to re-roof prior to installation?</inlineHelpText>
        <label>Re-Roofing Necessary Prior to Build?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_No_Proposal_Tool__c</fullName>
        <label>Reason for No Proposal Tool</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Session_End_Date__c</fullName>
        <inlineHelpText>Date the Review Session will end
The Review team has until this date to get all comments to the Sales Associate</inlineHelpText>
        <label>Review Session End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Session_Start_Date__c</fullName>
        <inlineHelpText>Internal Due Date and Date the Review Session will start. The proposal should be complete and the Review team will begin submitting comments to the Sales Operations Associate for final edits.</inlineHelpText>
        <label>Review Session Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Associate_Responsible__c</fullName>
        <inlineHelpText>Select the Sales Operations Team Member who is responsible</inlineHelpText>
        <label>Sales Operations Team Member Responsible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amanda Cain</fullName>
                </value>
                <value>
                    <fullName>Amy Stice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Dea Bacchetti</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Associate_Submit__c</fullName>
        <label>Sales Associate Submit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Interview_Date_TExt__c</fullName>
        <description>for use in proposal calendar only- not on page layouts</description>
        <formula>&quot;Scheduled Interview Date&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Interview Date- TExt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Interview_Date__c</fullName>
        <inlineHelpText>Enter Date and Time of scheduled interview (required when shortlisted)</inlineHelpText>
        <label>Scheduled Interview Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signature_of_Officer_Notary_Required__c</fullName>
        <inlineHelpText>Is a signature by a company officer or notary required for the proposal?</inlineHelpText>
        <label>Signature of Officer/Notary Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Visit_Meeting_Text__c</fullName>
        <description>for use in proposal calendar only- not on page layouts</description>
        <formula>&quot;Site Visit/Pre-Bid Meeting&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Visit Meeting- Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Pre_Bid_Meeting_Mandatory__c</fullName>
        <inlineHelpText>Is the Site Visit/Walk or Pre-Bid Meeting Mandatory?</inlineHelpText>
        <label>Site Visit/Pre-Bid Meeting Mandatory?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Visit_Pre_Bid_Meeting__c</fullName>
        <inlineHelpText>Enter the date and time of the Site Visit/Walk or Pre-Bid meeting</inlineHelpText>
        <label>Site Visit/Pre-Bid Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Special_Build_Procurement_Requirements__c</fullName>
        <inlineHelpText>Select any special build or procurement requirements associated with the proposal</inlineHelpText>
        <label>Special Build/Procurement Requirements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARRA</fullName>
                </value>
                <value>
                    <fullName>Buy American</fullName>
                </value>
                <value>
                    <fullName>DSA</fullName>
                </value>
                <value>
                    <fullName>Prevailing Wage</fullName>
                </value>
                <value>
                    <fullName>Union/PSA</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Proposal Request Submitted</fullName>
                </value>
                <value>
                    <fullName>Accepted by Proposal Manager</fullName>
                </value>
                <value>
                    <fullName>Slice n Dice Complete</fullName>
                </value>
                <value>
                    <fullName>First Draft in Progress</fullName>
                </value>
                <value>
                    <fullName>Draft Posted</fullName>
                </value>
                <value>
                    <fullName>Review Session Ended</fullName>
                </value>
                <value>
                    <fullName>Revision in Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_Summary__c</fullName>
        <inlineHelpText>Describe your proposed strategy. How do you plan on winning this project?</inlineHelpText>
        <label>Strategy Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submittal_Method_Other__c</fullName>
        <label>Submittal Method Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submittal_Method__c</fullName>
        <inlineHelpText>What is the required method for submitting this proposal?</inlineHelpText>
        <label>Submittal Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Posted on Site</fullName>
                </value>
                <value>
                    <fullName>Direct Mailing</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submittal_Notes__c</fullName>
        <inlineHelpText>Notes for the Sales Associate for submittal.</inlineHelpText>
        <label>Submittal Notes</label>
        <length>9000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Market__c</fullName>
        <formula>TEXT( Opportunity__r.Account.Target_Market__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Target Market from the Account</inlineHelpText>
        <label>Target Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone_Deadline_for_Questions__c</fullName>
        <label>Time Zone: Deadline for Questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone_Due_Date__c</fullName>
        <label>Time Zone: Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone_Review_Session_Start_Date__c</fullName>
        <label>Time Zone: Review Session Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone_Site_Visit_Pre_Bid_Meeting__c</fullName>
        <label>Time Zone: Site Visit/Pre-Bid Meeting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone: Review Session End Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>